# pacer

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-toolchain.cmake  startup_stm32h743xx.s  stm32h743vi_flash.ld  toolchain-arm-none-eabi.cmake
docs/: BRINGUP.md  BUILD_REQUIREMENTS.md  SETUP.md
freertos/: FreeRTOSConfig.h
include/: config.h  stm32h7xx_hal_conf.h  usart_printf.h
include/app/: app.h  cli.h  config.h  flight_phase.h  imu_debug.h  preflight.h
include/control/: balance.h  pid.h
include/ctrl/: attitude.h  balance.h  diff_drive.h  pid.h  quad_mixer.h
include/drivers/: motor.h
include/filter/: filter.h
include/hal/: battery.h  hal_gpio.h  hal_i2c.h  hal_pca9685.h  hal_tim.h  led.h  watchdog.h
include/lift/: lift.h
include/motor/: motor.h
include/remote/: remote.h
include/sensor/: imu.h  imu_icm20948.h
include/sensors/: attitude.h  imu.h
include/tracker/: beacon.h  camera.h  tracker.h
include/utils/: logger.h
scripts/: README.md  build.bat  build.sh  deploy.sh  download_deps.ps1  download_deps.sh  download_hal.md  flash.bat  flash.sh  flash_and_check.bat  flash_imu_check.bat  imu_monitor.bat  imu_monitor.py  link_monitor.bat  link_monitor.py  remote_send.py  serial_check.bat  serial_check.py
src/: main.c
src/app/: app.c  cli.c  flight_phase.c  imu_debug.c  preflight.c
src/control/: balance.c  pid.c
src/ctrl/: attitude.c  balance.c  diff_drive.c  pid.c  quad_mixer.c
src/drivers/: motor.c
src/filter/: filter.c
src/hal/: battery.c  hal_gpio.c  hal_i2c.c  hal_pca9685.c  hal_tim.c  led.c  syscalls.c  system_stm32h7xx.c  usart_printf.c  watchdog.c
src/lift/: lift.c
src/motor/: motor.c
src/remote/: remote.c
src/sensor/: imu.c
src/sensor/impl/: imu_icm20948.c
src/sensors/: attitude.c  imu.c
src/tracker/: beacon.c  camera.c  tracker.c
src/utils/: logger.c
stm32hal/: stm32h7xx_hal_msp.c  stm32h7xx_it.c
stm32hal/cmsis_device/Include/: stm32h743xx.h  stm32h7xx.h  system_stm32h7xx.h
stm32hal/hal/Src/: stm32h7xx_hal_smartcard.c
tests/: CMakeLists.txt  sim_quad.c  test_diff_drive.c  test_motor.c  test_pca9685.c  test_pid.c
tests/mocks/: mock_hal_gpio.c  mock_hal_i2c.c  mock_helpers.h
tools/: imu_sender.py  imu_viz.py
tools/espnow-remote/: README.md  mac_config.h.example  protocol.h
tools/espnow-remote/air/: air.ino
tools/espnow-remote/ground/: ground.ino  protocol.h
tools/pacer-remote/: README.md  go.mod  main.go
